update version of slick.js (1.5.6->1.8.1) + fix initializing of carousel + avoid layout jumps when slick is not initialized

--- a/public/css/less/components/artwork-carousel.less
+++ b/public/css/less/components/artwork-carousel.less
@@ -1,14 +1,13 @@
 .artwork-carousel-container {
   position: relative;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: -15px;
-  margin-right: -15px;
-  
+
   .artwork-carousel {
     width: 100%;
     overflow: hidden;
     height: 165px;
+    &.slick-initialized {
+      overflow: visible;
+    }
     &.small {
        height: 100px;
     }
@@ -17,6 +16,16 @@
     }
     &.artwork-detail-thumbnail {
        height: auto;
+       // graceful loading of slides (until slick is initialized, show only the first image to avoid layout jumps)
+       & a {
+         display: none;
+       }
+       & a:first-child {
+         display: block;
+       }
+       &.slick-initialized a {
+         display: block;
+       }
     }
     a {
         margin-right: 10px;
